second section added

--- a/nairaland.css
+++ b/nairaland.css
@@ -40,3 +40,28 @@ header div{
    font-size: large;
    /* font-family: sans-serif; */
 }
+section{
+    border: 2px solid rgb(200,204,192);;
+    width: 70%;
+    height: 35vh;
+    border-radius: 20px;
+    margin: 10px 0 0 180px; 
+}
+section h2{
+    padding: 10px 0 10px 10px;
+    margin-top: 0.9px;
+    text-align: center;
+    border-radius: 20px 20px 0 0;
+}
+section h3{
+    padding: 5px 0 5px 5px;
+    margin-top: -20px;
+    border: 2px solid rgb(200,204,192);
+    color: rgb(24,24,132);
+}
+/* #sport{
+    
+} */
+#science{
+    border: none;
+}
